Added displays to sales__details in css.
Added display none to sales__details. Added another sales details in
css with data state active. Put display block in this. In js, added
variables for sales and sales__details.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
     <div class="sales-group">
 
-      <article class="sales" data-state="inactive">
+      <article class="sales">
         <h2 class="sales__title">2013</h2>
         <strong class="sales__total">$5&nbsp;B</strong>
 
-        <aside class="sales__details">
+        <aside class="sales__details" data-state="inactive">
          <ul class="chart-list">
             <li>
               <a class="chart-list__link" href="#">1st Quarter</a>
